buildscript {
    repositories {
        maven { url = "https://maven.minecraftforge.net" }
        maven { url = "https://repo.spongepowered.org/maven" }
        mavenCentral()
    }
    dependencies {
        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
        classpath "org.spongepowered:mixingradle:0.7-SNAPSHOT"
    }
}

apply plugin: "net.minecraftforge.gradle"
apply plugin: "eclipse"
apply plugin: "maven-publish"
apply plugin: "org.spongepowered.mixin"

version = "${mc_version}-${mod_version}"
group = "gisellevonbingen.beyond_earth_giselle_addon"
archivesBaseName = "Beyond-Earth-Giselle-Addon"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)
println "Java: ${System.getProperty "java.version"}, JVM: ${System.getProperty "java.vm.version"} (${System.getProperty "java.vendor"}), Arch: ${System.getProperty "os.arch"}"

minecraft {
    mappings channel: "official", version: "${mc_version}"

    // accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")

    runs {
        client {
            workingDirectory project.file("run")

            property "forge.logging.markers", "REGISTRIES"
            property "forge.logging.console.level", "debug"
            property "forge.enabledGameTestNamespaces", "beyond_earth_giselle_addon"
            // arg "-mixin.config=beyond_earth_giselle_addon.mixin.json"

            mods {
                beyond_earth_giselle_addon {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file("run")

            property "forge.logging.markers", "REGISTRIES"
            property "forge.logging.console.level", "debug"
            property "forge.enabledGameTestNamespaces", "beyond_earth_giselle_addon"
            // arg "-mixin.config=beyond_earth_giselle_addon.mixin.json"

            mods {
                beyond_earth_giselle_addon {
                    source sourceSets.main
                }
            }
        }

        gameTestServer {
            workingDirectory project.file("run")

            property "forge.logging.markers", "REGISTRIES"
            property "forge.logging.console.level", "debug"
            property "forge.enabledGameTestNamespaces", "beyond_earth_giselle_addon"

            mods {
                beyond_earth_giselle_addon {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file("run")

            property "forge.logging.markers", "REGISTRIES"
            property "forge.logging.console.level", "debug"
            args "--mod", "beyond_earth_giselle_addon", "--all", "--output", file("src/generated/resources/"), "--existing", file("src/main/resources/")

            mods {
                beyond_earth_giselle_addon {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir "src/generated/resources" }

repositories {
    maven {
        name "JEI"
        url "https://dvs1.progwml6.com/files/maven"
    }
    maven {
        name "ModMaven"
        url "https://modmaven.dev"
    }
    maven {
        name "CurseForge"
        url "https://www.cursemaven.com"
    }
    maven {
        name "Local"
        url uri("${projectDir}/libs")
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"

    // Mixin
    if (System.getProperty("idea.sync.active") != "true") {
        annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
    }

    // JEI
    implementation fg.deobf("mezz.jei:jei-${mc_version}-forge:${jei_version}")

    // JER
    implementation fg.deobf("curse.maven:just-enough-resources-jer-240630:${jer_file}")

    // The One Probe
    implementation fg.deobf("curse.maven:the-one-probe-245211:${top_file}")

    // Jade
    //implementation fg.deobf("curse.maven:jade-324717:${jade_file}")

    // Refined Storage
    // compileOnly fg.deobf("curse.maven:refined-storage-243076:${refined_storage_file}")

    // JAOPCA
    implementation fg.deobf("curse.maven:jaopca-266936:${jaopca_file}")

    // Curios
    implementation fg.deobf("curse.maven:curios-309927:${curios_file}")

    // Beyond Earth
    implementation fg.deobf("net.mrscauthd:beyond_earth:${mc_version}-${beyond_earth_version}")
    
    // Immersive Engineering
    implementation fg.deobf("blusunrize.immersiveengineering:ImmersiveEngineering:${mc_version}-${immersive_engineering_version}")

    // Mekanism
    implementation fg.deobf("mekanism:Mekanism:${mc_version}-${mekanism_version}")
    runtimeOnly fg.deobf("mekanism:Mekanism:${mc_version}-${mekanism_version}:generators")

}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "beyond_earth_giselle_addon",
                "Specification-Vendor"    : "gisellevonbingen",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "gisellevonbingen",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy("reobfJar")
